added cron expression

--- a/InvoxMedical/src/Transcription.Scheduler/appsettings.json
+++ b/InvoxMedical/src/Transcription.Scheduler/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Schedule": ""  
+  "Schedule": "* * * * *" // Every minute.
+    //"0 0 * * *" -> Every Day at midnight
 }
