--- a/InvoxMedical/src/Transcription.Scheduler/Transcription.Scheduler.csproj
+++ b/InvoxMedical/src/Transcription.Scheduler/Transcription.Scheduler.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
