Added medicalrecords folder

--- a/InvoxMedical/src/Transcription.Scheduler/appsettings.json
+++ b/InvoxMedical/src/Transcription.Scheduler/appsettings.json
@@ -1,11 +1,13 @@
 ﻿{
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Debug"
     }
   },
-  "Schedule": "* * * * *" // Every minute.
-    //"0 0 * * *" -> Every Day at midnight
+  "SchedulerSettings": {
+    "MedicalRecordsFolder": "C:\\repos\\vocali\\InvoxMedical\\Records",
+    "CronExpression": "0 0 * * *" // -> Every Day at midnight
+  }
 }
